[gd_scene load_steps=11 format=3 uid="uid://c5vvvqe3m4f35"]

[ext_resource type="Script" uid="uid://bh6ngqtdvtdc2" path="res://Scripts/World.gd" id="1_1bvp3"]
[ext_resource type="Texture2D" uid="uid://dpu5crbpgl5oh" path="res://Assets/Office.png" id="1_h2yge"]
[ext_resource type="Texture2D" uid="uid://cxr1jkwwthcok" path="res://Assets/CEO.png" id="2_1bvp3"]
[ext_resource type="Script" uid="uid://c3bhs476jy3tf" path="res://Scripts/CEO.gd" id="3_lquwl"]

[sub_resource type="Animation" id="Animation_7mycd"]
resource_name = "walking"
length = 3.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0872665]
}

[sub_resource type="Animation" id="Animation_272bh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5vw27"]
_data = {
&"RESET": SubResource("Animation_272bh"),
&"walking": SubResource("Animation_7mycd")
}

[sub_resource type="Animation" id="Animation_kek77"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-601, 122)]
}

[sub_resource type="Animation" id="Animation_4c57u"]
resource_name = "enter_left"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4, 1.43333, 2.4, 3.33333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-900, 200), Vector2(-450, 250), Vector2(-450, 100), Vector2(0, 100)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_efxa6"]
_data = {
&"RESET": SubResource("Animation_kek77"),
&"enter_left": SubResource("Animation_4c57u")
}

[node name="World" type="Node2D"]
script = ExtResource("1_1bvp3")

[node name="Office" type="Node2D" parent="."]

[node name="Office2" type="Sprite2D" parent="."]
position = Vector2(0, 8)
texture = ExtResource("1_h2yge")

[node name="Ceo" type="Sprite2D" parent="."]
position = Vector2(-601, 122)
scale = Vector2(0.506836, 0.648438)
texture = ExtResource("2_1bvp3")
script = ExtResource("3_lquwl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Ceo"]
libraries = {
&"": SubResource("AnimationLibrary_5vw27")
}
speed_scale = 4.0

[node name="PositionAnimationPlayer" type="AnimationPlayer" parent="Ceo"]
libraries = {
&"": SubResource("AnimationLibrary_efxa6")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.75, 0.75)

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = -365.0
offset_top = -302.0
offset_right = 212.0
offset_bottom = -196.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
text = "Kaffee kostenlos anbieten"

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="arrived_at_desk" from="Ceo" to="." method="_on_ceo_arrived_at_desk"]
[connection signal="animation_finished" from="Ceo/PositionAnimationPlayer" to="Ceo" method="_on_position_animation_player_animation_finished"]
